# AgentDao

./: .gitignore  LICENSE  README.md  render.yaml
.github/workflows/: ci.yml
agents/: .env.example  README.md  pyproject.toml  requirements.txt
agents/scripts/: run_autonomous_loop.py  test_agents.py
agents/src/: __init__.py  main.py
agents/src/agents/: __init__.py  autonomous_orchestrator.py  finance_agent.py  marketing_agent.py  models.py  orchestrator.py
agents/src/chain/: __init__.py  backend_client.py
backend/: .env.example  README.md  package-lock.json  package.json
backend/scripts/: manual-flow-test.ts  test-attacks.ts  test-double-vote.ts  test-endpoints.ps1
backend/src/: index.ts
backend/src/chain/: client.ts  contracts.ts
backend/src/chain/abis/: AgentGovernor.json  AgentIdentity.json  AgentTreasury.json
config/: deployments.json
contracts/: .env.example  README.md  foundry.toml
contracts/broadcast/Deploy.s.sol/10143/: run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: AgentGovernor.sol  AgentIdentity.sol  AgentTreasury.sol  MockERC20.sol
contracts/test/: AllTests.t.sol
docs/: api-examples.md  architecture.md  demo-guide.md  deployment.md
docs/development/: agent-testing.md  foundry-setup.md  testnet-tokens.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentsPanel.tsx  Icons.tsx  ProposalsPanel.tsx  TreasuryPanel.tsx  TriggerPanel.tsx
frontend/lib/: config.ts
