[project]
name = "agentdao-agents"
version = "0.1.0"
description = "AI agents for AgentDAO using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.53",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.4",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
